--- a/entrega_05/estilo.css
+++ b/entrega_05/estilo.css
@@ -13,7 +13,7 @@
 }
 
 
-h1 {
+h1, h2 {
     font-family: "TITULOS";
 }
 
@@ -21,5 +21,33 @@ P {
     font-family: "TEXTO";
 }
 
+header {
+    background-color: #9daece;
+    display: flex;
+    height: 130px;
+    align-items: center;
+}
 
+body {
+    background-color: #ededed;
+}
 
+.INICIO {
+    text-align: center;
+}
+
+.MENSAJE {
+    display: block;
+    background-color: #7dc4ce; 
+    padding: 20px; 
+    border: 3px solid #9daece; 
+    border-radius: 20px; 
+    max-width: 400px; 
+    margin: 20px auto; 
+    text-align: justify; 
+}
+
+.MENSAJE p:nth-child(1),
+.MENSAJE p:nth-child(2) {
+    text-align: center;
+}
