--- a/entrega_05/estilo.css
+++ b/entrega_05/estilo.css
@@ -23,6 +23,14 @@ P {
     color: #413e3e;
 }
 
+a {
+    color: #ededed;
+}
+
+a:hover {
+    color: #d4afb9;      
+}
+
 header {
     background-color: #d0d0e1;
     display: flex;
@@ -94,14 +102,18 @@ body {
     background-color: #ededed;
 }
 
+hr {
+     border: none; 
+    background-color: #d0d0e1; 
+    height: 100px; 
+    width: 100%; 
+    margin: 20px auto; 
+}
+
 .INICIO {
     text-align: center;
     margin-top: 50px;
 
-}
-
-.INICIO img {
-    transform: translateY(-20%);
 }
 
 .MENSAJE {
@@ -110,23 +122,25 @@ body {
     padding: 20px; 
     border: 3px solid #9daece; 
     border-radius: 20px; 
-    max-width: 650px; 
+    max-width: 700px; 
     margin: 20px auto; 
     text-align: justify; 
-    transform: translateY(-25%);
+    transform: translateY(-2%);
 }
 
 
 .spotify {
-    width: 600px;
-    height: fit-content;
-    transform: translateX(5%);
+    width: 700px;
 }
 
 .MENSAJE p:nth-child(1) {
     text-align: center;
 }
 
+.HISTORIA {
+    text-align: center;
+    margin-top: 50px;
+}
 
 
 .container {
@@ -177,3 +191,9 @@ body {
     margin-left: auto;
     margin-right: auto; 
 }
+
+.EXPANSIÓN {
+    text-align: center;
+    margin-top: 50px;
+}
+
