--- a/entrega_05/estilo.css
+++ b/entrega_05/estilo.css
@@ -13,12 +13,12 @@
 }
 
 
-h1, h2 {
+h1, h2, h3, h4 {
     font-family: "TITULOS";
     color: #413e3e;
 }
 
-P {
+P, li, ul {
     font-family: "TEXTO";
     color: #413e3e;
 }
