--- a/andrea/docs/estilo.css
+++ b/andrea/docs/estilo.css
@@ -379,3 +379,56 @@ ul, ol, li {
     text-align: justify;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
+
+.CRONICA {
+    font-family: sans-serif;
+    padding: 20px;
+  }
+  
+  .centrar {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  
+  .bloque-intro, .bloque-final {
+    background-color: #d1d0e1;
+    padding: 20px;
+    margin: 15px auto;
+    border-radius: 10px;
+    max-width: 1000px;
+  }
+  
+  .bloque-doble {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: 30px auto;
+    max-width: 1200px;
+  }
+  
+  .tarjeta {
+    flex: 1 1 450px;
+    border-radius: 20px;
+    padding: 25px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  }
+  
+  .izquierda {
+    background-color: #ffb0c1;
+  }
+  
+  .derecha {
+    background-color:  #ffb0c1;
+  }
+  
+  .grafico {
+    width: 100%;
+    border-radius: 12px;
+    margin: 15px 0;
+  }
+  
+  .bloque-final {
+    background-color: #d1d0e1;
+  }
+  
