--- a/entrega_05/docs/estilo.css
+++ b/entrega_05/docs/estilo.css
@@ -249,6 +249,7 @@ hr {
     margin-right: auto; 
 }
 
+
 .EXPANSIÓN {
     text-align: center;
     margin-top: 50px;
@@ -258,6 +259,149 @@ ul, ol, li {
     font-family: "TEXTO";
     color: #413e3e;
 }
+
+    .barra1 {
+      display: flex;
+      align-items: center;
+      background-color: #413e3e;
+      padding: 10px 15px;
+      cursor: pointer;
+      user-select: none;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      gap: 10px;
+      font-size: 16px;
+
+    }
+
+.barra1 span {
+    font-family: "TÍTULOS";
+    font-weight: bolder;
+    color: #ededed;
+}
+
+    .barra2 {
+      display: flex;
+      align-items: center;
+      background-color: #d460ff;
+      padding: 10px 15px;
+      cursor: pointer;
+      user-select: none;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      gap: 10px;
+      font-size: 16px;
+
+    }
+
+.barra2 span {
+    font-family: "TÍTULOS";
+    font-weight: bolder;
+    color: #ededed;
+}
+
+    .barra3 {
+      display: flex;
+      align-items: center;
+      background-color: #eac6cf;
+      padding: 10px 15px;
+      cursor: pointer;
+      user-select: none;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      gap: 10px;
+      font-size: 16px;
+
+    }
+
+.barra3 span {
+    font-family: "TÍTULOS";
+    font-weight: bolder;
+    color: #413e3e;
+}
+
+    .barra4 {
+      display: flex;
+      align-items: center;
+      background-color: #c4c4d5;
+      padding: 10px 15px;
+      cursor: pointer;
+      user-select: none;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      gap: 10px;
+      font-size: 16px;
+
+    }
+
+.barra4 span {
+    font-family: "TÍTULOS";
+    font-weight: bolder;
+    color: #413e3e;
+}
+
+    .barra5 {
+      display: flex;
+      align-items: center;
+      background-color: #67d8b685;
+      padding: 10px 15px;
+      cursor: pointer;
+      user-select: none;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      gap: 10px;
+      font-size: 16px;
+
+    }
+
+.barra5 span {
+    font-family: "TÍTULOS";
+    font-weight: bolder;
+    color: #413e3e;
+}
+
+    .barra6 {
+      display: flex;
+      align-items: center;
+      background-color: #eb8484;
+      padding: 10px 15px;
+      cursor: pointer;
+      user-select: none;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      gap: 10px;
+      font-size: 16px;
+
+    }
+
+.barra6 span {
+    font-family: "TÍTULOS";
+    font-weight: bolder;
+    color: #ededed;
+}
+
+    .simbolo {
+      font-weight: bold;
+      font-size: 18px;
+      width: 20px;
+      text-align: center;
+      transition: transform 0.3s ease;
+    }
+
+
+    .contenido {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.3s ease;
+      background: #ededed;
+      padding: 0 15px;
+    }
+
+  .contenido.abierto {
+      max-height: 100%;
+      padding: 10px 15px;
+    }
+
 
 
 .container-carousel {
@@ -272,7 +416,7 @@ ul, ol, li {
 
 
 .GENS {
-    display: block;
+    display: flexbox;
     background-color: #ededed; 
     padding: 20px; 
     border: 3px solid #413e3e; 
@@ -297,8 +441,8 @@ ul, ol, li {
 
 
 .AUGE {
-    display: block;
-    background-color: #d460ff; 
+    display: flexbox;
+    background-color: #ededed; 
     padding: 20px; 
     border: 3px solid #946aa5; 
     border-radius: 20px; 
@@ -308,8 +452,8 @@ ul, ol, li {
 }
 
 .SALIDA {
-    display: block;
-    background-color: #ffb1c1; 
+    display: flexbox;
+    background-color: #ededed; 
     padding: 20px; 
     border: 3px solid #e667b1; 
     border-radius: 20px; 
@@ -319,8 +463,8 @@ ul, ol, li {
 }
 
 .HALLYU {
-    display: block;
-    background-color: #c4c4d5; 
+    display: flexbox;
+    background-color: #ededed; 
     padding: 20px; 
     border: 3px solid #9daece; 
     border-radius: 20px; 
@@ -330,8 +474,8 @@ ul, ol, li {
 }
 
 .JAPÓN {
-    display: block;
-    background-color: #ddfaff; 
+    display: flexbox;
+    background-color: #ededed; 
     padding: 20px; 
     border: 3px solid #94ecf1; 
     border-radius: 20px; 
@@ -345,8 +489,8 @@ ul, ol, li {
 
 
 .MENOS {
-    display: block;
-    background-color: #eb8484; 
+    display: flexbox;
+    background-color: #ededed; 
     padding: 20px; 
     border: 3px solid #bd4b4b; 
     border-radius: 20px; 
