--- a/andrea/docs/estilo.css
+++ b/andrea/docs/estilo.css
@@ -582,13 +582,13 @@ ul, ol, li {
     margin-top: 10px;
     border-radius: 10px;
     overflow: hidden;
-    background-color: #ff6f61;
+    background-color: #ffc14C;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   }
   
   .bloque3 .acordeon-titulo {
-    background-color: #ff6f61;
-    color: white;
+    background-color: #ffc14C;
+    color: #ededed;
     font-weight: bold;
     padding: 15px 20px;
     width: 100%;
@@ -612,8 +612,8 @@ ul, ol, li {
   .bloque3 .acordeon-contenido {
     padding: 15px 20px;
     display: none;
-    background-color: #ffd3cf;
-    color: #333;
+    background-color: #f6c992;
+    color: #413e3e;
     font-size: 15px;
   }
   
