--- a/andrea/docs/estilo.css
+++ b/andrea/docs/estilo.css
@@ -647,4 +647,39 @@ ul, ol, li {
       font-size: 14px;
     }
   }
+  #btn {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    border-style: none;
+    padding: 0.5rem;
+    border-radius: 5px;
+    background-color: rebeccapurple;
+    color: #fff;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+  
+  #btn:active {
+    transform: translateY(2px);
+  }
+  
+  #btn:focus {
+    outline: none;
+  }
+  
+  .heart {
+    position: fixed;
+    top: -9vh;
+    transform: translateY(0);
+    transform: translateX(0);
+    animation: fall 3s linear;
+    font-size: 1.2rem;
+  }
+  
+  @keyframes fall {
+    to {
+      transform: translateY(105vh);
+    }
+  }
   
